snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__bin__fstrelabel-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/bin/fstrelabel-main.cc",
    ),
    start_line: 1,
    end_line: 104,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 5,
            exit_sum: 5,
            total_space_functions: 0,
            exit_min: 5,
            exit_max: 5,
        },
        cognitive: Stats {
            structural: 16,
            structural_sum: 16,
            structural_min: 16,
            structural_max: 16,
            nesting: 2,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 18.0,
            cyclomatic: 18.0,
            n: 1,
            cyclomatic_max: 18.0,
            cyclomatic_min: 18.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 266,
            u_operands: 75,
            operands: 186,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 104,
                unit: true,
                sloc_min: 104,
                sloc_max: 104,
            },
            ploc: Ploc {
                lines: {
                    61,
                    55,
                    49,
                    37,
                    98,
                    92,
                    19,
                    80,
                    13,
                    74,
                    7,
                    68,
                    62,
                    56,
                    44,
                    38,
                    99,
                    32,
                    93,
                    26,
                    87,
                    20,
                    81,
                    14,
                    75,
                    8,
                    69,
                    63,
                    51,
                    45,
                    39,
                    100,
                    33,
                    94,
                    27,
                    88,
                    21,
                    82,
                    76,
                    9,
                    70,
                    64,
                    52,
                    46,
                    40,
                    34,
                    95,
                    28,
                    89,
                    22,
                    83,
                    16,
                    77,
                    71,
                    65,
                    59,
                    53,
                    47,
                    41,
                    102,
                    35,
                    96,
                    29,
                    90,
                    23,
                    84,
                    17,
                    78,
                    11,
                    72,
                    5,
                    66,
                    48,
                    42,
                    103,
                    36,
                    97,
                    30,
                    91,
                    24,
                    85,
                    18,
                    79,
                    12,
                    73,
                    67,
                },
                ploc_min: 86,
                ploc_max: 86,
            },
            cloc: Cloc {
                only_comment_lines: 6,
                code_comment_lines: 0,
                comment_line_end: Some(
                    86,
                ),
                cloc_min: 6,
                cloc_max: 6,
            },
            lloc: Lloc {
                logical_lines: 48,
                lloc_min: 48,
                lloc_max: 48,
            },
            space_count: 1,
            blank_min: 12,
            blank_max: 12,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 452.0,
            halstead_vocabulary: 99.0,
            halstead_volume: 2996.4691922759835,
            cyclomatic: 18.0,
            sloc: 104.0,
            comments_percentage: 0.057692307692307696,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
